Use hl2 flashlight sound.
No download!

--- a/cfg/sourcemod/plugin.flashlight.cfg
+++ b/cfg/sourcemod/plugin.flashlight.cfg
@@ -10,5 +10,5 @@ sm_flashlight_length "1024"
 
 // Flashlight toggle sound
 // -
-// Default: "flashlight/flashlight.wav"
-sm_flashlight_sound "flashlight/flashlight.wav"
+// Default: "items/flashlight1.wav"
+sm_flashlight_sound "items/flashlight1.wav"
